hphp/hack/test/typecheck/reactive/owned_mutable2.php
<?hh
<<file: __EnableUnstableFeatures('coeffects_provisional')>>
class A {
  // ERROR
  <<__OwnedMutable>>
  public function f(): void {
  }
}
